@@ -6,6 +6,7 @@ Generic changes/fixes
 	
 Device specific changes/fixes
 	* Junsi DX* - correct input power values
+	* GPS-Logger3 - build offset to both pressure sensors while calculating pressure ∆TEC
 
 
 Version 3.5.1 - 25 Oct 2021
